# PerlicaBot

./: Cargo.toml  README.md
config/: config.json
src/: client.rs  config.rs  handler.rs  intents.rs  main.rs
src/utils/: json.rs
