[package]
name = "perlica_bot"
authors = ["Rhelvetican"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[profile.dev]
opt-level = 0
debug = true
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
rpath = true
lto = "fat"
strip = "symbols"
